--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT. Transwisata Prima Aviation - Load Sheet Helicopter A109S Grand</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -102,11 +104,24 @@
             background-size: 10px 10px;
 
         }
+        @media print {
+            body {
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+            .no-print {
+                display: none;
+            }
+            .card {
+                box-shadow: none;
+                border: 1px solid #e5e7eb;
+            }
+        }
     </style>
 </head>
 <body class="p-4 md:p-8">
 
-    <div class="max-w-7xl mx-auto">
+    <div class="max-w-7xl mx-auto" id="form-to-print">
         <!-- Header -->
         <div class="text-center mb-8">
             <h1 class="text-2xl md:text-4xl font-bold text-gray-800">PT. TRANSWISATA PRIMA AVIATION</h1>
@@ -419,13 +434,13 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Signature -->
-                <div class="card">
+                 <!-- Signature & Download -->
+                <div class="card no-print">
                      <div class="p-4">
                         <p class="text-xs text-gray-500 italic mb-4">
                             <strong>Disclaimer:</strong> The Pilot in Command is solely responsible for ensuring the accuracy of all calculations and confirming that the aircraft is operated within the weight and balance limits prescribed in the approved Aircraft Flight Manual (AFM).
                         </p>
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-2 gap-4 items-end">
                             <div>
                                 <label class="block text-sm font-medium text-gray-700">Prepared by</label>
                                 <input type="text" placeholder="Your Name" class="mt-1">
@@ -433,6 +448,11 @@
                              <div>
                                 <label class="block text-sm font-medium text-gray-700">Accepted by (PIC)</label>
                                 <input type="text" placeholder="PIC Signature" class="mt-1">
+                            </div>
+                            <div class="col-span-2">
+                                <button id="download-pdf-btn" class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
+                                    Download PDF
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -443,6 +463,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            window.jsPDF = window.jspdf.jsPDF;
             // --- DATA ---
             const payloadItems = [
                 { id: 'pax1', label: 'Pax. Seat 1 forward left', arm: 2.200, weight: 0 },
@@ -629,6 +650,37 @@
                 }
             }
 
+            // --- PDF Generation ---
+            function generatePDF() {
+                const form = document.getElementById('form-to-print');
+                html2canvas(form, { scale: 2 }).then(canvas => {
+                    const imgData = canvas.toDataURL('image/png');
+                    const pdf = new jsPDF('p', 'mm', 'a4');
+                    const pdfWidth = pdf.internal.pageSize.getWidth();
+                    const pdfHeight = pdf.internal.pageSize.getHeight();
+                    const canvasWidth = canvas.width;
+                    const canvasHeight = canvas.height;
+                    const ratio = canvasWidth / canvasHeight;
+                    const imgWidth = pdfWidth - 20; // with margin
+                    const imgHeight = imgWidth / ratio;
+
+                    let heightLeft = imgHeight;
+                    let position = 10;
+
+                    pdf.addImage(imgData, 'PNG', 10, position, imgWidth, imgHeight);
+                    heightLeft -= (pdfHeight - 20);
+
+                    while (heightLeft > 0) {
+                        position = heightLeft - imgHeight + 10;
+                        pdf.addPage();
+                        pdf.addImage(imgData, 'PNG', 10, position, imgWidth, imgHeight);
+                        heightLeft -= (pdfHeight - 20);
+                    }
+                    
+                    pdf.save('Loadsheet_PK-TWZ.pdf');
+                });
+            }
+
             // --- EVENT LISTENERS ---
             function addEventListeners() {
                 const allInputs = document.querySelectorAll('input[type="number"], input[type="text"], select');
@@ -636,7 +688,9 @@
                     if (input.type === 'number') {
                         input.addEventListener('focus', function() {
                             this.setAttribute('data-original-value', this.value);
-                            this.value = '';
+                            if (this.value === '0') {
+                                this.value = '';
+                            }
                         });
 
                         input.addEventListener('blur', function() {
@@ -659,15 +713,19 @@
                     layoutInput.addEventListener('input', () => {
                         if (document.activeElement === layoutInput) {
                            tableInput.value = layoutInput.value;
+                           calculateAll();
                         }
                     });
 
                     tableInput.addEventListener('input', () => {
                          if (document.activeElement === tableInput) {
                            layoutInput.value = tableInput.value;
+                           calculateAll();
                         }
                     });
                 }
+                
+                document.getElementById('download-pdf-btn').addEventListener('click', generatePDF);
             }
 
 
